# Games

./: .actrc  .dockerignore  .gitattributes  .gitignore  .mutmut.toml  .pre-commit-config.yaml  .secrets.example  ARCHITECTURE.md  ARCHITECTURE_STRUCTURE.txt  ARCHITECTURE_SUMMARY.md  BATTLESHIP_GUI_SHOWCASE.md  BLACKJACK_FEATURES.md  CARD_GAMES_IMPLEMENTATION.md  CHANGELOG.md  CLI_ENHANCEMENTS_SUMMARY.md  CODE_QUALITY.md  COMPLEXITY_REPORT.md  CONTRIBUTING.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_SUMMARY.md  DOTS_AND_BOXES_FEATURES.md  Dockerfile  ENHANCEMENTS_APPLIED.md  FINAL_MCP_DEBUG_REPORT.md  GAMES.md  GITHUB_ACTIONS_DEBUG_REPORT.md  GUI_README.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  MCP_TEST_RESULTS.md  MIGRATION_GUIDE_GUI.md  MIGRATION_STATUS.md  Makefile  Q4_2025_IMPLEMENTATION_SUMMARY.md  README.md  RELEASE_v1.2.1_INSTRUCTIONS.md  TESTING.md  TESTING_QUICKSTART.md  (+14 more)
.github/: AGENTS.md  COPILOT_INSTRUCTIONS_GUIDE.md  MCP_CONFIG.md  MCP_DEBUG_SUMMARY.md  README_MCP.md  copilot-instructions.md  dependabot.yml  mcp-config.json
.github/instructions/: AGENTS.md  game-implementations.instructions.md  gui-files.instructions.md  test-files.instructions.md
.github/workflows/: README.md  build-executables.yml  ci.yml  code-quality.yml.example  codeql.yml  coverage.yml  docs-build.yml  format-and-lint.yml  lint.yml  manual-coverage.yml  manual-tests.yml  mobile-build.yml  mutation-testing.yml  publish-pypi.yml  test-act-setup.yml  test.yml
.venv-ci-test/: pyvenv.cfg
.venv-smoke/: pyvenv.cfg
build_configs/: README.md
build_configs/mobile/: briefcase.toml  buildozer.spec
build_configs/nuitka/: build.py
build_configs/pyinstaller/: games.spec
card_games/: IMPLEMENTATION_SUMMARY.md  __init__.py
card_games/blackjack/: FEATURES.md  __init__.py  __main__.py  cli.py  educational.py  game.py  gui.py  gui_pyqt.py
card_games/bluff/: FEATURES.md  README.md  __init__.py  __main__.py  bluff.py  gui.py  gui_pyqt.py
card_games/bridge/: README.md  __main__.py  bidding.py  cli.py  game.py  gui.py  gui_pyqt.py
card_games/canasta/: README.md  __init__.py  __main__.py  cli.py  game.py  gui.py  gui_pyqt.py
card_games/common/: __init__.py  card_images.py  cards.py  gui_card_renderers.py  soundscapes.py  stats.py
card_games/crazy_eights/: README.md  __init__.py  __main__.py  cli.py  game.py  gui.py  gui_pyqt.py
card_games/cribbage/: README.md  __main__.py  ai.py  cli.py  game.py
card_games/euchre/: README.md  __init__.py  __main__.py  ai.py  cli.py  game.py
card_games/gin_rummy/: README.md  __init__.py  __main__.py  cli.py  game.py  gui.py  gui_pyqt.py
card_games/go_fish/: README.md  __init__.py  __main__.py  cli.py  game.py  gui.py  gui_pyqt.py
card_games/hearts/: README.md  __init__.py  __main__.py  cli.py  game.py  gui.py  gui_pyqt.py
card_games/pinochle/: __init__.py  __main__.py  cli.py  game.py  gui.py  gui_pyqt.py
card_games/poker/: ENHANCEMENTS.md  __init__.py  __main__.py  educational.py  gui.py  gui_pyqt.py  poker.py  poker_core.py  poker_hand_evaluator.py  texas_holdem_newbie_guide.md
card_games/rummy500/: README.md  __init__.py  ai.py  cli.py  game.py
card_games/solitaire/: README.md  __init__.py  __main__.py  cli.py  game.py  gui.py  gui_pyqt.py
card_games/spades/: README.md  __main__.py  cli.py  game.py  gui.py  gui_pyqt.py
card_games/uno/: CUSTOM_DECK_GUIDE.md  FEATURES.md  IMPLEMENTATION_NOTES.md  __init__.py  (+8 more)
colorama/: __init__.py
common/: GUI_ENHANCEMENTS.md  README.md  __init__.py  achievements_registry.py  ai_enhancements.py  ai_strategy.py  animations.py  challenges.py  cli_utils.py  daily_challenges.py  educational.py  game_catalog.py  game_engine.py  gui_base.py  gui_base_pyqt.py  gui_framework.py  i18n.py  leaderboard_service.py  profile.py  profile_service.py  recommendation_service.py  sound_manager.py  themes.py  tutorial_registry.py  tutorial_session.py
dice_games/: README.md  __init__.py
docs/: ANALYTICS_INTEGRATION_GUIDE.md  CLI_UTILS.md  EDUCATIONAL_FEATURES.md  EDUCATIONAL_QUICKSTART.md  GUI_FRAMEWORKS.md  GUI_MIGRATION_GUIDE.md  NEW_GAMES_IMPLEMENTATION.md  ORGANIZATION_RATIONALE.md  PYQT5_IMPLEMENTATION.md  QUICK_START.md  README.md  REORGANIZATION_SUMMARY.md  requirements.txt
examples/: README.md  analytics_demo.py  architecture_demo.py  cli_enhanced_game.py  cli_utils_demo.py  educational_demo.py  gui_enhancements_demo.py  simple_game_example.py  tic_tac_toe_with_analytics.py
games_collection/: __init__.py
logic_games/: README.md  __init__.py  gui.py  progression.py  registry.py
paper_games/: __init__.py
plugins/: README.md  example_plugin.py
scripts/: README.md  __init__.py  build_executable.sh  build_pyscript_bundle.py  bump_version.py  check_complexity.sh  check_version_consistency.py  debug_workflow.py  launcher.py  run_tests.sh  run_workflow.sh  setup_act.sh  test_gui.py  test_mcp_servers.py  update_catalog_docs.py  update_homebrew_formula.py  validate_mcp_config.py  validate_pyqt5.py  validate_workflows.py  workflow_failures.py  workflow_info.py
tests/: test_achievement_registry.py  test_achievements.py  test_analytics.py  test_architecture.py  test_battleship.py  test_blackjack.py  test_bluff.py  test_bump_version.py  test_catalog_registry.py  test_cli_integration.py  test_cli_utils.py  test_cli_utils_no_colorama.py  test_common_base_classes.py  test_configuration_panel.py  test_crash_reporter.py  test_cross_game_leaderboard.py  test_daily_challenges.py  test_dice_games.py  test_dots_and_boxes.py  test_dots_and_boxes_features.py  test_educational_features.py  test_event_bus_integration.py  test_gui_enhancements.py  test_gui_framework.py  test_gui_preferences.py  test_gui_pyqt.py  test_hangman_features.py  test_launcher_entrypoint.py  test_launcher_gui.py  test_launcher_updates.py  test_logic_games.py  test_logic_progression.py  test_mcp_config.py  test_mcp_config_loader.py  test_new_card_games.py  test_new_paper_games.py  test_nim.py  test_nim_enhancements.py  test_nim_integration.py  test_package_version.py  (+18 more)
word_games/: README.md  __init__.py
(+602 files in other folders)
