[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "tests*",
    "docs*",
    "examples*",
    "build*",
    "dist*",
    "*.egg-info",
    "colorama*",  # Exclude vendored colorama
]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.rst"]

[project]
name = "games-collection"
version = "1.0.1"
description = "A comprehensive collection of classic card, paper, dice, logic, and word games with AI opponents and both CLI and GUI interfaces"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "saint2706", email = "45678566+saint2706@users.noreply.github.com"},
]
maintainers = [
    {name = "saint2706", email = "45678566+saint2706@users.noreply.github.com"},
]
keywords = [
    "games",
    "card-games",
    "board-games",
    "uno",
    "poker",
    "blackjack",
    "tic-tac-toe",
    "chess",
    "ai",
    "gui",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "colorama>=0.4.6",
]

[project.urls]
Homepage = "https://github.com/saint2706/Games"
Documentation = "https://github.com/saint2706/Games#readme"
Repository = "https://github.com/saint2706/Games"
Issues = "https://github.com/saint2706/Games/issues"
Changelog = "https://github.com/saint2706/Games/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    # Core testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-timeout>=2.1.0",
    # GUI testing
    "pytest-qt>=4.0.0",
    "pyqt5",
    # Performance testing
    "pytest-benchmark>=4.0.0",
    # Code quality
    "black>=24.0",
    "ruff>=0.8",
    "mdformat>=0.7.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "radon>=6.0",
    # Coverage reporting
    "coverage[toml]>=7.0.0",
    # Mutation testing
    "mutmut>=2.4.0",
    # Additional utilities
    "freezegun>=1.2.0",
    "responses>=0.23.0",
    "pytest-mock>=3.10.0",
]
gui = [
    "pyqt5>=5.15",
    "pygame>=2.0",
]

[project.scripts]
# Main launcher
games-collection = "scripts.launcher:main"

# Card Games
games-uno = "card_games.uno.uno:main"
games-poker = "card_games.poker.poker:main"
games-blackjack = "card_games.blackjack.blackjack:main"
games-hearts = "card_games.hearts.hearts:main"
games-spades = "card_games.spades.spades:main"
games-bridge = "card_games.bridge.bridge:main"
games-gin-rummy = "card_games.gin_rummy.gin_rummy:main"
games-go-fish = "card_games.go_fish.go_fish:main"
games-crazy-eights = "card_games.crazy_eights.crazy_eights:main"
games-war = "card_games.war.war:main"
games-solitaire = "card_games.solitaire.solitaire:main"
games-bluff = "card_games.bluff.bluff:main"
games-cribbage = "card_games.cribbage.__main__:main"
games-euchre = "card_games.euchre.__main__:main"
games-rummy500 = "card_games.rummy500.__main__:main"

# Paper Games  
games-tic-tac-toe = "paper_games.tic_tac_toe.tic_tac_toe:main"
games-battleship = "paper_games.battleship.battleship:main"
games-checkers = "paper_games.checkers.checkers:main"
games-connect-four = "paper_games.connect_four.connect_four:main"
games-othello = "paper_games.othello.othello:main"
games-dots-and-boxes = "paper_games.dots_and_boxes.dots_and_boxes:main"
games-hangman = "paper_games.hangman.hangman:main"
games-nim = "paper_games.nim.nim:main"
games-sudoku = "paper_games.sudoku.sudoku:main"
games-mancala = "paper_games.mancala.mancala:main"

# Dice Games
games-craps = "dice_games.craps.craps:main"
games-bunco = "dice_games.bunco.bunco:main"
games-liars-dice = "dice_games.liars_dice.liars_dice:main"

# Word Games
games-unscramble = "word_games.unscramble.unscramble:main"
games-wordle = "word_games.wordle.wordle:main"

# Logic Games
games-mastermind = "logic_games.mastermind.mastermind:main"
games-codebreaker = "logic_games.codebreaker.codebreaker:main"

[tool.black]
line-length = 160

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "I"]  # Removed C90 complexity checks for now (31 violations to address separately)
ignore = ["E402"]  # Allow imports not at top

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Imports in __init__ are often for re-export
"tests/fixtures/__init__.py" = ["F403"]  # Star imports in test fixtures are intentional

# Complexity checking disabled for now - 31 functions exceed threshold
# Re-enable after refactoring: select = ["E", "F", "I", "C90"]
# [tool.ruff.lint.mccabe]
# max-complexity = 10

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.radon]
# Radon configuration for code complexity analysis
# Run: radon cc . -a -s
# cc: Cyclomatic Complexity
# mi: Maintainability Index

[tool.mdformat]
wrap = 120

[tool.mutmut]
# Mutation testing configuration
# Paths to mutate
paths_to_mutate = ["paper_games/", "card_games/"]

# Paths to exclude from mutation
paths_to_exclude = "*/tests/*,*/demo*.py,*/gui.py,*/__main__.py,*/__init__.py"

# Test runner command
runner = "python -m pytest tests/ -x --assert=plain -o log_cli=false"

# Backup directory
backup = true

# Use coverage data to only mutate covered lines
use_coverage = true

# Test time multiplier (mutations taking longer than this are killed)
test_time_multiplier = 2.0

# Test time base (minimum time to wait)
test_time_base = 0.0

# Swallow output
swallow_output = true

# Dictionary synonyms
dict_synonyms = ["Struct", "NamedStruct", "NamedTuple", "namedtuple"]
